--- a/Bubbles.xcodeproj/xcshareddata/xcschemes/iOS - Bubbles.xcscheme
+++ b/Bubbles.xcodeproj/xcshareddata/xcschemes/iOS - Bubbles.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "2600"
-   version = "1.7">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3AF7E9F71EB64A46003BB06D"
-               BuildableName = "Texture Compute.app"
-               BlueprintName = "macOS - Texture Compute"
-               ReferencedContainer = "container:Texture Compute.xcodeproj">
+               BlueprintIdentifier = "3AF7E9C71EB64A46003BB06D"
+               BuildableName = "Bubbles.app"
+               BlueprintName = "iOS - Bubbles"
+               ReferencedContainer = "container:Bubbles.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -44,10 +44,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3AF7E9F71EB64A46003BB06D"
-            BuildableName = "Texture Compute.app"
-            BlueprintName = "macOS - Texture Compute"
-            ReferencedContainer = "container:Texture Compute.xcodeproj">
+            BlueprintIdentifier = "3AF7E9C71EB64A46003BB06D"
+            BuildableName = "Bubbles.app"
+            BlueprintName = "iOS - Bubbles"
+            ReferencedContainer = "container:Bubbles.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -57,16 +57,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3AF7E9F71EB64A46003BB06D"
-            BuildableName = "Texture Compute.app"
-            BlueprintName = "macOS - Texture Compute"
-            ReferencedContainer = "container:Texture Compute.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
