--- a/Bubbles.xcodeproj/xcshareddata/xcschemes/macOS - Bubbles.xcscheme
+++ b/Bubbles.xcodeproj/xcshareddata/xcschemes/macOS - Bubbles.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "2600"
-   version = "1.7">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3AF7E9E11EB64A46003BB06D"
+               BlueprintIdentifier = "3AF7E9F71EB64A46003BB06D"
                BuildableName = "Texture Compute.app"
-               BlueprintName = "tvOS - Texture Compute"
-               ReferencedContainer = "container:Texture Compute.xcodeproj">
+               BlueprintName = "macOS - Bubbles"
+               ReferencedContainer = "container:Bubbles.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -40,16 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3AF7E9E11EB64A46003BB06D"
-            BuildableName = "Texture Compute.app"
-            BlueprintName = "tvOS - Texture Compute"
-            ReferencedContainer = "container:Texture Compute.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -57,16 +47,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3AF7E9E11EB64A46003BB06D"
+            BlueprintIdentifier = "3AF7E9F71EB64A46003BB06D"
             BuildableName = "Texture Compute.app"
-            BlueprintName = "tvOS - Texture Compute"
-            ReferencedContainer = "container:Texture Compute.xcodeproj">
+            BlueprintName = "macOS - Bubbles"
+            ReferencedContainer = "container:Bubbles.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
